# rust-examples

./: Cargo.toml  README.md
.github/workflows/: release.yml
control/: Cargo.toml  Dockerfile  README.md
control/src/: main.rs
function/: Cargo.toml  Dockerfile  README.md
function/src/: main.rs
hello/: Cargo.toml  Dockerfile  README.md
hello/src/: main.rs
move/: Cargo.toml  Dockerfile  README.md
move/src/: main.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: main.rs
string/: Cargo.toml  Dockerfile  README.md
string/src/: main.rs
struct/: Cargo.toml  Dockerfile  README.md
struct/src/: main.rs
wasi/: Cargo.toml  Dockerfile  README.md
